...
        val openDialog = remember { mutableStateOf(false) }
        Scaffold(
            topBar = {
                TopAppBar(title = {
                    Text(
                        stringResource(R.string.user_transaction_history),
                        modifier = Modifier.testTag("screenTitle"),
                    )
                })
            },
            floatingActionButton = {
                if (transactionsHistoryListViewState !is LoadingState) {
                    FloatingActionButton(
                       modifier =  Modifier.testTag("addTransactionButton"),
                        onClick = {
                            openDialog.value = true
                        }) {
                        Icon(Icons.Filled.Add, "")
                    }
                }
...
